# turboquant-vllm

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_quantize_roundtrip.py
turboquant_vllm/: __init__.py  codebook.py  config.py  hook_installer.py  plugin.py  quantizer.py  rotation.py
turboquant_vllm/codebooks/: codebook_d96_b1.json  codebook_d96_b2.json  codebook_d96_b3.json  codebook_d96_b4.json
turboquant_vllm/kernels/: __init__.py  fallback.py  triton_decode.py
