[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-vllm"
version = "0.1.0"
description = "TurboQuant 3-bit KV cache compression (Google ICLR 2026) natively integrated into vLLM"
authors = [{ name = "Jon Castro", email = "Acecastro28@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant_vllm*"]

[tool.setuptools.package-data]
"turboquant_vllm" = ["codebooks/*.json"]
